src/views/HomeView/HomeView.module.css
.main {
  padding: 0;
  margin: 0;
  height: auto;
  width: 100vw;
}

.header {
  position: sticky;
  position: -webkit-sticky;
  width: 100%;
  z-index: 200;
  top: 0;
  background-color: rgba(3 0 24 / 0.83);
  display: flex;
  justify-content: flex-end;
  padding: 1rem 2rem;
  @media screen and (min-width: 768px) {
    justify-content: center;
  }
}

.nav {
  padding: 0;
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 100%;
  @media screen and (min-width: 768px) {
    padding: 0 2rem;
    width: 1050px;
  }
}

.nav > h1 > a {
  /* font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif; */
  font-size: medium;
  @media screen and (min-width: 768px) {
    font-size: x-large;
  }
}

.nav > h1 a {
  text-decoration: none;
}

.nav ul {
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  column-gap: 12px;
  @media screen and (min-width: 768px) {
    column-gap: 2rem;
  }
}

.nav ul li {
  border-right: 1px solid coral;
  padding-right: 12px;
  margin: 0;
  font-size: small;
  display: flex;
  width: fit-content;
  @media screen and (min-width: 768px) {
    font-size: medium;
  }
}
.nav ul li a {
  padding: 0;
  margin: 0;
  text-decoration: none;
  transition: text-decoration 0.5s, color 0.5s; /* Adding color transition */
}

.nav ul li a:hover {
  text-decoration: underline; /* Underline on hover */
  color: #d53b2b; /* Change text color on hover */
}

.section {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  padding: 2rem 0;
  background-color: #2d2b3f;
  @media screen and (min-width: 768px) {
    justify-content: center;
    padding: 4rem 0;
  }
}

.section > div {
  padding: 0 2rem;
  @media screen and (min-width: 768px) {
    width: 1050px;
  }
}

.heroImage {
  object-fit: cover;
  aspect-ratio: 16/9;
  height: 80vh;
  width: 100%;
}

.hero h1 {
  color: lab(100 0 -0.03 / 0.78);
  font-size: x-large;
  @media screen and (min-width: 768px) {
    font-size: xx-large;
  }
}

/* ABOUT SECTION */
.about {
  display: flex;
  flex-direction: column;
  padding-top: 4rem;
  align-items: flex-start;
  @media screen and (min-width: 768px) {
    width: 1050px;
    flex-direction: row;
    column-gap: 4rem;
  }
}

.aboutImg {
  margin-bottom: 2rem;
  @media screen and (min-width: 768px) {
    height: 464px;
    width: 454px;
    border-radius: 12px;
  }
}

.about p,
.about h1,
.about h2 {
  margin-bottom: 2rem;
  height: min-content;
}

/* Testimonial Section */
.tetimonial {
  @media screen and (min-width: 768px) {
    width: 1050px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    column-gap: 4rem;
    justify-content: space-between;
    /* justify-items: flex-end; */
  }
}

.testimonialSection {
  background-color: #393752;
}

.tetimonial div {
  width: 300px;
  @media screen and (min-width: 768px) {
    width: 100%;
  }
}
/* Contact Us section */
.contactSection {
  background-color: #986040;
}

.contactUs {
  padding: 2rem;
  @media screen and (min-width: 768px) {
    display: flex;
    width: 1050px;
    flex-direction: row;
    justify-content: space-between;
  }
}

.contactUs a,
.contactUs address {
  color: white;
}

.footer {
}

.footerSecondary {
  display: flex;
  justify-content: flex-start;
  @media screen and (min-width: 768px) {
    justify-content: center;
  }
}

.footerNav {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  @media screen and (min-width: 768px) {
    flex-direction: row;
    width: 1050px;
  }
}

.footerNav ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  row-gap: 12px;
}

.footerNav ul li {
  padding: 0;
  margin: 0;
}

.footerNav ul li a {
}

.footerPrimary {
  display: flex;
  justify-content: flex-start;
  @media screen and (min-width: 768px) {
    justify-content: center;
  }
}

.footerPrimary div {
  display: flex;
  padding: 2rem;
  align-items: center;
  font-size: small;
  @media screen and (min-width: 768px) {
    width: 1050px;
    justify-content: space-between;
  }
}

.footerPrimary div a {
  text-decoration: underline;
}

